feat: implementa metodos de consulta en RutaService/Controller [Marcos]